Added button style

--- a/soundboard/soundboardStyles.css
+++ b/soundboard/soundboardStyles.css
@@ -21,3 +21,20 @@ a:link, a:visited {
 a:hover, a:active {
   background-color: mediumslateblue;
 }
+.button {
+  background-color: royalblue;
+  border: none;
+  color: mintcream;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  transition-duration: 0.2s;
+  border-radius: 4px;
+}
+.button:hover{
+  background-color: mediumslateblue;
+}
